[FIX]- fixed spacing issue

--- a/assets/css/verifyNumber.css
+++ b/assets/css/verifyNumber.css
@@ -12,6 +12,7 @@
 
 html{
     box-sizing: border-box;
+    font-size: 12px;
 }
 
 *,
@@ -23,7 +24,7 @@ html{
 }
 
 body{
-    font-size: 62.5%;
+    /* font-size: 50.5%; */
     background-color: #f0f0f0;
 }
 
@@ -154,6 +155,14 @@ img.success-image{
     /* opacity: 0.5; */
     z-index: 2;
     visibility: hidden;
+}
+
+a.hoverme{
+    transition: all 0.3s ease;
+}
+
+a.hoverme:hover{
+    border-bottom: 1px solid #6C63FF;
 }
 
 
